# learn-japanese

./: README.md  pyproject.toml
api/: index.py
learn_japanese/: __init__.py  main.py
